# platynui-sut

./: LICENSE.txt  README.md  pyproject.toml
src/platynui_sut/: __about__.py  __init__.py  app.py  main.py
src/platynui_sut/pages/: __init__.py  about_page.py  controls_page.py  listview_page.py  new.controls_page.py  tableview_page.py  textedit_page.py
src/platynui_sut/styles/: theme.py
src/platynui_sut/ui/: controls_page.ui  mainwindow.ui  ui_mainwindow.py  ui_window.py  ui_window.ui
